src/index.scss
//      Variables       \\
$neon-green: #6fff00;
$neon-purple: #f000ff;
$neon-cyan: #00fffb;
$neon-blue: #001eff;
$neon-orange: #fd5f00;
$neon-pink: #ff00bb;
$neon-yellow: #ccff15;
$green-hover: #6fff00a9;
$cyan-hover: #00fffbb7;
$blue-glow: rgb(0, 0, 78);
$cyan-glow: #004b49;

$radius: 15px;
$border-width: 3px;
$border-style: groove;


//      Mixin       \\
@mixin aspect-ratio($width, $height) {
    overflow: hidden;
    height: 0;
    padding-top: ($width / $height) * 100%;
}

// separate into own module 
@mixin changing-font {
    margin: auto;
    animation: fadeIn 1s, flow 6s linear infinite; 
    background: linear-gradient(-60deg, $neon-purple 0%, $neon-blue 20%,  $neon-cyan 40%, $neon-green 60%, $neon-pink 80%, $neon-purple 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-size: 200%;
}


//      Font        \\
@font-face {
    font-family: 'neon';
    src: url('./fonts/neon_glow/NEON GLOW.otf');
}


//    Format   \\
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
    font-weight: 300;

    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: center center;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
}


//      Body        \\
.page {
    padding-top: 5em;
    background: black;
    color: white;
}

.page > * {
    margin-bottom: 2em;
}

.container {
    padding: 20px;
    max-width: 95vw;
    margin: 0 auto;
}

h1 {
    text-align: center;
    color: $neon-green;
    font-weight: 500;
    font-family: 'neon';
    font-size: 3em;
}

h2 {
    text-decoration: underline;
    color: $neon-cyan;
    text-align: center;
    margin-bottom: 1em;
    font-size: 2.2em;
    font-family: 'neon';
}

h3 {
    color: $neon-purple;
    margin: 0.5em 0;
    font-size: 1.8em;
    font-family: 'neon';
    font-weight: 1100;
}


//      Header      \\
header nav {
    background: $blue-glow;
    border: 5px double $neon-blue;
    position: fixed;
    z-index: 1;
    top: 0;
    width: 100%;
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav-links {
    display: flex;
    width: 100%;
    justify-content: space-evenly;
}

.nav-item a {
    font-size: 1.5em;
    font-weight: 800;
    font-family: 'neon';
    color: $neon-green;
    padding: 5px;
}

.nav-item a:hover {
    color: $green-hover;
}

.nav-item a:active {
    border: 2px dotted $neon-green;
    border-radius: 15px;
}

header li {
    margin: 0.8em;
}

.logo {
    display: none;
    @include changing-font;
}


//      About       \\
.about {
    height: 500px;
    color: white;
    padding: 20px 10px;
    position: relative;

    // background: url('https://besthqwallpapers.com/Uploads/8-4-2019/86567/thumb2-liteshow-close-up-fortnite-battle-royale-ninja-2019-games.jpg');
    // background: url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
    background-size: cover;
    background-position: center 40px;
    background-attachment: fixed;
    @include aspect-ratio(560, 933);

    .aboutText {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        width: 77vw;
        height: 80%;
        margin: auto;
        font-size: 1.2em;

        position: absolute;
        top: 2em;
        left: 0;
        right: 0;
    }
    
    .aboutText big {
        font-size: 2em;
    }
}    


//      Portfolio       \\
.portfolio {
    display: flex;
    flex-direction: column;
}

.tech-projects-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.technologies {
    border: $border-width $border-style $neon-purple;
    border-radius: $radius;

    margin-bottom: 5em;

    h3 {
        text-align: center;
    }

    .techs {
        margin: 2em 0;
    }
    
    .techs ul {
        display: flex;
        justify-content: space-evenly;
        flex-wrap: wrap;
    }

    .techs li {
        display: flex;
        justify-content: flex-start;
        align-items: center;
        margin: 0 1em;
        line-height: 2em;
        font-size: 1.2em;
        cursor: pointer;
        color: $neon-yellow;
    }

    .techs li:hover {
        text-decoration: underline;
    }

    .icon {
        margin-right: 1em;
        height: 2.5em;
        width: 2.5em;
    }
}

.projectTiles {
    text-align: center;
    border: $border-width $border-style $neon-purple;
    border-radius: $radius;
}

.projectGroup {
    border: 2px solid $neon-blue;
    border-radius: $radius;
    margin-bottom: 2em;
    background: $blue-glow;
}

.projectGroup ul {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.projectTile {
    margin-bottom: 1em;
    border: 3px $border-style $neon-blue;
    height: 200px;
    flex-basis: 80%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    font-size: 1.2em;
    font-weight: 500;
    color: $neon-green;
    border-radius: 8px;

    a, h4 {
        font-weight: 500;
        width: max-content;
        background: rgba(0, 0, 0, 0.4);
        padding: 0.4em;
        border-radius: 10px;
        border: 1px outset $neon-green;
    }

    h4 {
        margin: 0 auto;
        font-size: 1.2em;
        border-style: ridge;
        cursor: default;
    }

    a:hover {
        color: $green-hover;
    }
}

.viewURLs {
    display: flex;
    justify-content: space-around;
    font-size: 0.8em;
}

.view-all {
    align-self: stretch;
    width: 100%;
    margin-bottom: 1em;
}

.view-all button {
    width: 100%;
    padding: 0.5em;
    font-size: 1.4em;
    border-radius: 8px;
    background: $blue-glow;
    color: $neon-cyan;
    font-weight: 800;
    font-family: 'neon';
    border: 1.5px solid $neon-blue;
}

.view-all button:hover {
    color: $cyan-hover;
    background: rgba(0, 0, 255, 0.397);
    cursor: pointer;
}


//      Contact     \\
.form {
    margin: auto;
    width: 30em;
    border: $border-width $border-style $neon-cyan;
    background: $cyan-glow;
    border-radius: $radius;
    min-height: 300px;
    max-width: 80vw;
    display: flex;
    flex-direction: column;
    padding: 40px;

    button {
        padding: 1em;
        background: #1aa85a;
        color: white;
        border: 1px solid $neon-cyan;
        border-radius: 5px;
        font-size: 1.2em;
        font-weight: 500;
    }
    
    button:hover {
        background: #168b4b;
    }
}

.contact {
    margin-bottom: 0;
}

.contact form {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 25em;
}

input, textarea {
    margin: 5px 0 15px;
    padding: 8px;
    width: 100%;
    border-radius: 6px;
    border: 1px solid $neon-cyan;
    background: #92bbbaa4;
    color: white;
}

textarea {
    height: 5em;
}

label {
    margin-bottom: 0.5em;
    font-size: 1.2em;
    font-weight: 500;
}


//      Footer      \\
footer {
    color: white;
    background: black;
    padding-bottom: 1em;
    height: 5em;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    border-top: 2px $border-style $neon-blue;
}


//         Media Queries        \\
@media (min-width: 480px) {
    .logo {
        display: block;
        padding-left: 0.5em;
    }

    .nav-links {
        justify-content: flex-end;
    }
}

@media (min-width: 680px) {
    .projectTile {
        flex-basis: 45%;
    }

    .projectTile {
        margin: 0.5em 0.5em;
    }
}

@media (min-width: 1024px) {
    .tech-projects-container {
        flex-direction: row;
        align-items: flex-start;
    }

    .technologies {
        padding-bottom: 0;
    }

    .technologies ul {
        flex-direction: column;
    }
}

@media (min-width: 1200px) {
    .projectTile {
        flex-basis: 30%;
    }
}

@media (min-width: 1600px) {
    .projectTile {
        flex-basis: 23%;
    }
}


//      Animations      \\

// separate into own module
/*  Color flow */
@keyframes flow {
    from {
        background-position: 0%;
    }
    to {
        background-position: 200%;
    }
}

